crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/FunctionType/constant_state_mutability/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected ConstantKeyword_Reserved. One of AtKeyword_Unreserved, ErrorKeyword_Unreserved, FinneyKeyword_Unreserved, FromKeyword_Unreserved, GlobalKeyword_Unreserved, Identifier, ImmutableKeyword_Reserved, LayoutKeyword_Unreserved, OpenBracket, OverrideKeyword_Reserved, RevertKeyword_Unreserved, SzaboKeyword_Unreserved, TransientKeyword_Unreserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/generated/from_v1/SourceUnit/FunctionType/constant_state_mutability/input.sol:5:13]
   │
 5 │ function () constant internal returns (uint)
   │             ────┬───  
   │                 ╰───── Error occurred here.
───╯
